Accessing call log data for all contacts and storing them.  Does not compile:  Attempting to figure out why getContentResolver() doesn't work.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,6 +24,7 @@
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
 
     <application
         android:description="@string/app_description"
