--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,7 +41,7 @@
              adjustResize. -->
         <activity
                 android:name=".ui.ContactsListActivity"
-                android:label="@string/activity_contacts_list"
+                android:label="@string/app_name"
                 android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
