--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,6 +26,7 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
     <uses-permission android:name="android.permission.READ_SMS"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 
@@ -72,5 +73,13 @@
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                        android:value=".ui.ContactsListActivity" />
         </activity>
+        <receiver
+            android:name=".notification.timedUpdate"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="UPDATE_BESOCIAL"/>
+                <receiver android:name="com.example.android.contactslist.notification.timedUpdate" />
+            </intent-filter>
+        </receiver>
     </application>
 </manifest>
