--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,7 +33,7 @@
 
     <application
         android:description="@string/app_description"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_launcher_3"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:allowBackup="true">
