--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,6 +31,12 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
 
+    <provider>
+        android:authorities="com.example.android.contactslist.contentprovider"
+        android:name=".contentprovider.MyTodoContentProvider"
+        <permission>android:permission=false</permission>
+    </provider>
+
     <application
         android:description="@string/app_description"
         android:icon="@drawable/ic_launcher_3"
