--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,8 +32,8 @@
     <uses-permission android:name="android.permission.CALL_PHONE"/>
 
     <provider>
-        android:authorities="com.example.android.contactslist.contentprovider"
-        android:name=".contentprovider.MyTodoContentProvider"
+        android:authorities="com.example.android.contactslist.contactStats"
+        android:name=".contactStats.ContactStatsContentProvider"
         <permission>android:permission=false</permission>
     </provider>
 
