--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,11 +31,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
 
-    <provider>
-        android:authorities="com.example.android.contactslist.contactStats"
-        android:name=".contactStats.ContactStatsContentProvider"
-        <permission>android:permission=false</permission>
-    </provider>
+
 
     <application
         android:description="@string/app_description"
@@ -43,6 +39,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:allowBackup="true">
+
 
         <!-- When the soft keyboard is showing the views of this activity should be resized in the
              remaining space so that inline searching can take place without having to dismiss the
@@ -95,5 +92,10 @@
                 <receiver android:name="com.example.android.contactslist.notification.timedUpdate" />
             </intent-filter>
         </receiver>
+
+        <provider
+            android:name="com.example.android.contactslist.contactStats.ContactStatsContentProvider"
+            android:authorities="com.example.android.contactslist.contactStats.provider">
+        </provider>
     </application>
 </manifest>
