Implemented XML phone log import, specific to the CallLogBackup utility.  Importing this file, initiated through the XML import activity, automatically updates the statistics for each of the listed contacts, as with the other data import methods.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -85,6 +85,14 @@
             </intent-filter>
 
         </activity>
+
+        <activity android:name=".ui.FileImportActivity"
+            android:label="@string/file_import_activity"
+            android:parentActivityName=".ui.ContactsListActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.ContactsListActivity" />
+
+        </activity>
         <receiver
             android:name=".notification.timedUpdate"
             android:enabled="true">
