--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,8 +45,10 @@
              remaining space so that inline searching can take place without having to dismiss the
              keyboard to see all the content. Therefore windowSoftInputMode is set to
              adjustResize. -->
+
+
         <activity
-                android:name=".ui.ContactsListActivity"
+                android:name=".ui.Welcome"
                 android:label="@string/app_name"
                 android:windowSoftInputMode="adjustResize">
             <intent-filter>
@@ -64,7 +66,15 @@
             <meta-data android:name="android.app.searchable"
                        android:resource="@xml/searchable_contacts" />
         </activity>
-        <activity
+
+            <activity
+                android:name=".ui.ContactsListActivity"
+                android:label="@string/app_name"
+                android:windowSoftInputMode="adjustResize">/>
+            </activity>
+
+
+            <activity
             android:name=".ui.ContactDetailActivity"
             android:label="@string/activity_contact_detail"
             android:parentActivityName=".ui.ContactsListActivity">
@@ -110,6 +120,7 @@
                 android:value=".ui.ContactDetailActivity" />
 
         </activity>
+
         <receiver
             android:name=".notification.timedUpdate"
             android:enabled="true">
