--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -133,5 +133,9 @@
             android:name="com.example.android.contactslist.contactStats.ContactStatsContentProvider"
             android:authorities="com.example.android.contactslist.contactStats.provider">
         </provider>
+        <provider
+            android:name="com.example.android.contactslist.eventLogs.SocialEventsContentProvider"
+            android:authorities="com.example.android.contactslist.socialEvents.provider">
+        </provider>
     </application>
 </manifest>
