--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -70,7 +70,8 @@
             <activity
                 android:name=".ui.ContactsListActivity"
                 android:label="@string/app_name"
-                android:windowSoftInputMode="adjustResize">/>
+                android:windowSoftInputMode="adjustResize"
+                android:theme="@style/CustomActionBarTheme">
             </activity>
 
 
@@ -78,7 +79,6 @@
             android:name=".ui.ContactDetailActivity"
             android:label="@string/activity_contact_detail"
             android:parentActivityName=".ui.ContactsListActivity">
-            <!--android:theme="@style/CustomActionBarTheme"-->
 
 
             <!-- Define hierarchical parent of this activity, both via the system
@@ -108,7 +108,8 @@
         </activity>
         <activity android:name=".ui.EventEntryActivity"
             android:label="@string/event_entry_activity"
-            android:parentActivityName=".ui.ContactDetailActivity">
+            android:parentActivityName=".ui.ContactDetailActivity"
+            android:theme="@style/CustomActionBarTheme">
             <meta-data android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.ContactDetailActivity" />
 
