--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -67,6 +67,13 @@
                        android:resource="@xml/searchable_contacts" />
         </activity>
 
+        <activity
+            android:name=".ui.groupsEditor.GroupsEditorActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustResize"
+            android:theme="@style/CustomActionBarTheme">
+        </activity>
+
             <activity
                 android:name=".ui.ContactsListActivity"
                 android:label="@string/app_name"
