--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -71,7 +71,10 @@
             android:name=".ui.groupsEditor.GroupsEditorActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustResize"
+            android:parentActivityName=".ui.ContactsListActivity"
             android:theme="@style/CustomActionBarTheme">
+        <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.ContactsListActivity" />
         </activity>
 
             <activity
